<resources>
    <string name="action_settings">Settings</string>
    <string name="failure">数据加载失败，请稍后再试！</string>
    <string name="setnetwork">当前无可用网络，是否设置网络？</string>
    <string name="setting_yes">设置网络</string>
    <string name="setting_no">退出</string>

    <string name="app_name">OsChina</string>

    <string name="set_network">当前无可用网络，是否设置网络？</string>
    <string name="load_failure">数据加载失败，请稍后再试！</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--登录界面-->
    <string name="username_input">请输入注册用户名</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="reg_hint">
        请使用“开源中国”邮箱和密码登录\n
        注册请前往https://git.oschina.net
    </string>
    <string name="title_hint">基于Material Design设计</string>

    <string name="loading">加载中请稍后</string>
    <!-- 导航栏-->
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="language">语言</string>
    <string name="shakeOff">摇一摇</string>
    <string name="other">其它</string>
    <string name="setting">设置</string>
    <string name="change_theme">切换主题</string>
    <string name="click_login">点击登录</string>

    <string name="normal_setting">常规设置</string>
    <string name="right_mode">右手操作模式</string>
    <string name="right_mode_hint">
        开启右手操作模式，侧边栏将从右边划\n
        开，默认从左边划开
    </string>
    <string name="language_type">语言卡片式</string>
    <string name="language_type_hint">勾选：卡片式，未勾选：列表式</string>
    <string name="clear_cache">清空缓存</string>
    <string name="clear_cache_success">清空缓存成功</string>
    <string name="sure">确定</string>
    <string name="test_cache">1.85MB</string>
    <string name="other_setting">其它设置</string>
    <string name="feedback">意见反馈</string>
    <string name="give_mark">赏个好评</string>
    <string name="give_mark_hint">记得五分好评哦！</string>

    <!-- 发现界面-->
    <string name="recommend_proj">推荐项目</string>
    <string name="hot_proj">热门项目</string>
    <string name="recent_update">最近更新</string>

    <!-- 摇一摇界面-->
    <string name="searching_project">正在为你搜索项目，请稍后……</string>

    <!-- <string name="data">整数型:%1$d，浮点型：%2$.2f，字符串:%3$s</string>
			%后面是占位符的位置，从1开始， $ 后面是填充数据的类型 %d：表示整数型；
			%f ：表示浮点型，其中f前面的.  3表示小数的位数 %c：表示字符串  -->
    <string name="theme_num">%1$d个主题</string>
    <string name="getting_random_project_hint">正在为你搜索项目，请稍候…</string>
    <string name="sem_watch">\uf06e</string>
    <string name="sem_star">\uf005</string>
    <string name="sem_fork">\uf126</string>
    <string name="sem_tag">\uf02b</string>
    <string name="fa_clock_o">\uf017</string>
    <string name="sem_user">\uf007</string>
    <string name="sem_empty_watch">\uf070</string>
    <string name="sem_empty_star">\uf006</string>
    <string name="no_description_hint">暂无项目介绍</string>

    <string name="in_project_title">在项目</string>
    <string name="update_project_title">更新了项目&#160;</string>
    <string name="close_project_title">关闭了项目&#160;</string>
    <string name="reopen_project_title">重新打开了项目&#160;</string>
    <string name="pull_project_title">推送到了项目&#160;</string>
    <string name="comment_project_title">评论了项目</string>
    <string name="accept_project_title">接受了项目&#160;</string>
    <string name="enter_project_title">加入了项目&#160;</string>
    <string name="leave_project_title">离开了项目&#160;</string>
    <string name="fork_project_title">Fork了项目&#160;</string>
    <string name="update_project_default_title">更新了动态：</string>
    <string name="branch_title">分支</string>
    <string name="create_project_title">创建了</string>

    <string name="today">今天%s</string>
    <string name="first_before_dat">昨天%s</string>
    <string name="secode_before_dat">前天%s</string>
    <string name="before_day">%1$d天前%2$s</string>
    <string name="before_month">%d个月前</string>
    <string name="before_year">%d年前</string>
    <string name="unknow_time">未知时间</string>
    <string name="refresh_count_info">更新了%1$d内容</string>
    <string name="update_head_title">更新于：%s</string>

    <string name="no_login_hint">点击登录</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="sure_exit">再按一次退出应用</string>

    <string name="dynamic">动态</string>
    <string name="project">项目</string>
    <string name="Star">最近更新</string>
    <string name="Watch">Watch</string>

    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_save">自动登录</string>
    <string name="login_title">登录</string>
    <string name="oschina_info">请使用“开源中国”邮箱和密码登录</string>
    <string name="msg_login_username_null">请输入用户名</string>
    <string name="msg_login_passwork_null">请输入密码</string>

    <string name="genenal_info">基本信息</string>
    <string name="username">昵称：</string>
    <string name="description">个人介绍：</string>
    <string name="description_null">暂无介绍</string>
    <string name="additional_info">其它信息</string>
    <string name="logout">注销登录</string>
    <string name="no_content">暂无</string>
    <string name="email">邮箱：</string>
    <string name="weibo">微博：</string>
    <string name="blog">博客：</string>
    <string name="follow_info">follow</string>
    <string name="followersTitle">followers： </string>
    <string name="starredTitle">stared： </string>
    <string name="followingTitle">following：</string>
    <string name="watchedTitle">watched：</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="sure_logout">确定注销登录？</string>

    <string name="project_code_readme">Readme</string>
    <string name="project_code_codes">代码</string>
    <string name="project_code_commits">提交</string>
    <string name="project_code_issues">问题</string>
    <string name="no_point">未指定</string>
    <string name="no_readme_hint">该项目暂无README.md</string>
</resources>
