<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/item_nav_find" android:icon="@mipmap/menu_icon_explore"
            android:title="@string/find"/>
        <item android:id="@+id/item_nav_mine" android:icon="@mipmap/menu_icon_my"
            android:title="@string/mine"/>
        <item android:id="@+id/item_nav_language" android:icon="@mipmap/menu_icon_language"
            android:title="@string/language"/>
        <item android:id="@+id/item_nav_shake" android:icon="@mipmap/menu_icon_shark"
            android:title="@string/shakeOff"/>
    </group>
    <item android:title="@string/other">
        <menu>
            <item android:id="@+id/item_change_theme" android:title="@string/change_theme"/>
            <item android:id="@+id/item_setting" android:title="@string/setting"/>
        </menu>
    </item>
</menu>