<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_match" android:orientation="vertical">

    <LinearLayout style="@style/layout_match_wrap" android:background="?attr/colorPrimary"
        android:orientation="vertical">
        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="25dp" android:layout_gravity="center"
            android:src="@mipmap/img_logo"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" android:layout_marginTop="20dp"
            android:gravity="center" android:text="基于Material Design设计"
            android:textColor="@android:color/white" android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center" android:orientation="vertical"
        android:padding="25dip" android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputLayout android:id="@+id/username"
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.wuxianedu.corelib.widget.ClearEditText android:layout_width="match_parent"
                android:layout_height="45dp" android:hint="@string/username_hint"
                android:imeOptions="actionNext" android:inputType="textEmailAddress"
                android:text="384662120@qq.com"
                android:singleLine="true" android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/password"
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.wuxianedu.corelib.widget.ClearEditText android:layout_width="match_parent"
                android:layout_height="45dp" android:layout_marginTop="15dp"
                android:hint="@string/password_hint" android:imeOptions="actionDone"
                android:inputType="textPassword" android:singleLine="true"
                android:text="wawzh06034421"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox android:id="@+id/checkbox_id" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/password_save"
            android:layout_marginTop="10dip"/>

        <Button android:id="@+id/bt_login" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dip"
            android:background="@drawable/btn_bg" android:paddingLeft="10dp"
            android:paddingRight="10dp" android:text="@string/login_title"
            android:textColor="@android:color/white" android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingLeft="25dip" android:orientation="vertical">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/oschina_info" android:textColor="?attr/colorPrimary"
            android:textSize="12sp" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:gravity="left" android:text="注册请前往https://git.oschina.net"
            android:textColor="?attr/colorPrimary" android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
